<resources>
    <string name="app_name">ChessTimerAppProject</string>
    <string name="mode">Mode</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="player_2">Player 2</string>
    <string name="player_1">Player 1</string>
    <string name="_10_00">10:00</string>
    <string name="custom_time_min">Custom time (min)</string>
    <string name="enter">Enter</string>
    <string name="blitz_mode">Blitz Mode</string>
    <string name="rapid_mode">Rapid Mode</string>
    <string name="custom_mode">Custom Mode</string>
    <string name="select_mode">Select Mode</string>
</resources>