<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chessbackground"
    tools:context=".MainActivity">

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerVertical="true"
        android:visibility="visible"
        android:backgroundTint="@color/blur"/> <!-- imaginary line -->

    <TextView
        android:id="@+id/timer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/horizontal_line"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/_10_00"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:rotation="180"/> <!-- timer for player 1 -->

    <TextView
        android:id="@+id/timer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/horizontal_line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/_10_00"
        android:textColor="@android:color/white"
        android:textSize="30sp" /> <!-- timer for player 2 -->

    <Button
        android:id="@+id/player1Button"
        android:layout_width="450dp"
        android:layout_height="275dp"
        android:layout_above="@id/horizontal_line"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:text="@string/player_1"
        android:backgroundTint="@color/blur"
        android:textSize="80sp"
        android:textColor="@android:color/white"
        android:rotation="180"/>

    <Button
        android:id="@+id/player2Button"
        android:layout_width="450dp"
        android:layout_height="275dp"
        android:layout_below="@id/horizontal_line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:backgroundTint="@color/blur"
        android:textSize="80sp"
        android:text="@string/player_2"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="800dp"
        android:layout_marginEnd="61dp"
        android:layout_toStartOf="@id/stopButton"
        android:backgroundTint="@color/blur"
        android:text="@string/start"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="800dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/blur"
        android:text="@string/stop"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="340dp"
        android:layout_marginTop="800dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/blur"
        android:text="@string/reset"
        android:textColor="@android:color/white" />

    <Spinner
        android:id="@+id/changeModeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="290dp"
        android:layout_marginTop="15dp"
        android:background="@color/blur"
        android:padding="2dp"
        android:popupBackground="@layout/spinner_dropdown_background"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/customTimeInput"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:hint="@string/custom_time_min"
        android:background="@color/blur"
        android:inputType="number"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:importantForAutofill="no"
        android:autofillHints="Custom Time"
        tools:targetApi="o"/>
</RelativeLayout>
